# liar

server/: Cargo.toml  dev.http
server/src/: liar.rs  main.rs
server/src/game/: mod.rs  player.rs
web/: package-lock.json  package.json
web/src/: app.html  types.ts
web/src/lib/: BidSelector.svelte  Dice.svelte  PlayerCard.svelte  message.ts
web/src/routes/: about.svelte  index.svelte
web/src/routes/game/: [code].svelte
web/src/theme/: _smui-theme.scss
web/static/: smui.css
