[package]
name = "liar-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
slotmap = "1.0.6"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
